src/test/deca/syntax/valid/homemade/test/test_pars_val_instruction_sum_expr_plus.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour les sum_expr.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    instruction_bidon + instruction_bidon2;
}