src/test/deca/syntax/invalid/homemade/test/test_lex_inv_floathex_no0x.deca
// Description:
//    Programme minimaliste testant les float.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

{
    9854f.12P+45F
}